--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ importlib-metadata==1.5.0
 kombu==4.6.8
 Pillow==7.0.0
 psycopg2-binary==2.8.4
+python-memcached==1.59
 pytz==2019.3
+redis==3.4.1
+six==1.14.0
 sqlparse==0.3.1
 vine==1.3.0
 zipp==1.2.0
