--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==2.5.2
 billiard==3.6.3.0
 celery==4.4.1
 Django==2.2
+djangorestframework==3.11.0
 importlib-metadata==1.5.0
 kombu==4.6.8
 Pillow==7.0.0
