--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==22.12.0
 celery==4.4.1
 click==8.1.3
 Django==2.2
+django-environ==0.9.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==5.2.2
 importlib-metadata==1.5.0
